[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Miidoriya"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dependencies]
actix-web = "4.3.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
