[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Miidoriya"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dependencies]
actix-web = "4.3.0"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.11.14"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
